--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,17 @@ version: "3"
 services:
   golang-app:
     image: lorenzodagostinorad/go-example:latest
-    ports:
-      - 8081:3000
+    environment:
+      - PROD_SERVER_PORT=3000
 
   backend-build:
     build:
-      context: ./app
+      context: ./next-app
       dockerfile: Dockerfile
     ports:
-      - 3000:80
+      - 3000:3000
     environment:
-      - VERSION_API_ENDPOINT=127.0.0.1
-      - VERSION_API_PORT=8081
+      - VERSION_API_ENDPOINT=golang-app
+      - VERSION_API_PORT=3000
     depends_on:
       - golang-app
