--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -23,5 +23,4 @@ jobs:
     - name: Build the Docker image
       run: |
           docker buildx create --use
-          docker buildx build --push --platform linux/amd64 -t ${{secrets.DOCKER_REGISTRY_USER}}/react-example:${{ github.sha }} -t ${{secrets.DOCKER_REGISTRY_USER}}/react-example ./app
-          docker buildx build --push --platform linux/amd64 -t ${{secrets.DOCKER_REGISTRY_USER}}/react-example:${{ github.sha }} -t ${{secrets.DOCKER_REGISTRY_USER}}/next-example ./next-app
+          docker buildx build --push --platform linux/amd64 -t ${{secrets.DOCKER_REGISTRY_USER}}/next-example:${{ github.sha }} -t ${{secrets.DOCKER_REGISTRY_USER}}/next-example ./next-app
